fix list-title height jump

--- a/src/app/components/Board/ListAdder/ListAdder.scss
+++ b/src/app/components/Board/ListAdder/ListAdder.scss
@@ -22,10 +22,11 @@
 }
 
 .list-title-textarea-wrapper {
-  margin: 4px 5px 1px 5px;
+  margin: 4px 5px 7px 5px;
 }
 
 .list-title-textarea {
+  float: left;
   border-radius: 3px;
   padding: 6px;
   overflow: hidden;
